# plifaces

./: .clang-format  CMakeLists.txt  README.md  main.cpp
include/private/: Config.hpp.in  DirEntry.hpp  Errors.hpp
include/private/linux/: Directory.hpp
include/public/: Interface.hpp  InterfaceAddress.hpp  InterfaceVector.hpp  IpV4.hpp  Mac.hpp  NetAddress.hpp  NetInterface.hpp  Netlink.hpp  Plifaces.hpp  Proc.hpp  Route.hpp  Types.hpp
include/public/linux/: Netlink.hpp
src/: DirEntry.cpp  Directory.cpp  Errors.cpp  InterfaceVector.cpp  IpV4.cpp  NetAddress.cpp  Netlink.cpp  Plifaces.cpp  Proc.cpp  Route.cpp
src/Windows/: PlifacesWindows.cpp
src/linux/: DirEntry.cpp  Directory.cpp  IpV4.cpp  Mac.cpp  Netlink.cpp  PlifacesLinux.cpp  Route.cpp
src/windows/: PlifacesWindows.cpp
